--- a/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
+++ b/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
@@ -109,11 +109,24 @@
                                     <action selector="changeContainerValue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B4Z-VL-hzB"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sdw-kh-clb">
+                                <rect key="frame" x="314" y="762" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="Adi-Ss-Aas"/>
+                                    <constraint firstAttribute="height" constant="70" id="JeX-YB-RpC"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="강제 종료"/>
+                                <connections>
+                                    <action selector="crashButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vle-Gk-NxK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8MA-HE-Qck" secondAttribute="trailing" constant="10" id="08N-ZF-aad"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sdw-kh-clb" secondAttribute="bottom" constant="30" id="BGb-0P-7sb"/>
                             <constraint firstItem="IgK-Tm-l7q" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="BxM-Xm-7nJ"/>
                             <constraint firstItem="gVh-9L-tNB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="DK8-YI-X0R"/>
                             <constraint firstItem="4Yq-YL-OnR" firstAttribute="top" secondItem="8MA-HE-Qck" secondAttribute="bottom" constant="-64" id="GL9-Xb-PuS"/>
@@ -122,6 +135,7 @@
                             <constraint firstItem="9Tt-K7-t2K" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="MAT-NE-RWQ"/>
                             <constraint firstItem="sJV-mM-mpU" firstAttribute="top" secondItem="9Tt-K7-t2K" secondAttribute="bottom" constant="30" id="OXW-1u-nIw"/>
                             <constraint firstItem="IgK-Tm-l7q" firstAttribute="top" secondItem="4Yq-YL-OnR" secondAttribute="bottom" constant="41" id="SdX-fW-l3J"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sdw-kh-clb" secondAttribute="trailing" constant="30" id="Vj6-9i-wHH"/>
                             <constraint firstItem="yyB-XR-UcC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="WCd-u9-AQK"/>
                             <constraint firstItem="yyB-XR-UcC" firstAttribute="top" secondItem="zyT-Yg-wZc" secondAttribute="bottom" constant="20" id="aw1-Ml-xag"/>
                             <constraint firstItem="gVh-9L-tNB" firstAttribute="top" secondItem="sJV-mM-mpU" secondAttribute="bottom" constant="50" id="bGX-kR-2Ux"/>
