--- a/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
+++ b/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zGv-hV-285">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -289,20 +289,37 @@
             </objects>
             <point key="canvasLocation" x="787" y="88"/>
         </scene>
-        <!--Firebase View Controller-->
+        <!--Main-->
         <scene sceneID="YyM-LN-jOH">
             <objects>
-                <viewController id="zGv-hV-285" customClass="FirebaseViewController" customModule="FunctionList_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FirebaseViewController" title="Main" id="zGv-hV-285" customClass="FirebaseViewController" customModule="FunctionList_Swift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="alE-8d-1nF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lDn-Ji-CGe">
+                                <rect key="frame" x="166" y="107" width="82" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="YMo-g4-QoH"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="InitCrash"/>
+                                <connections>
+                                    <action selector="initiateCrash:" destination="zGv-hV-285" eventType="touchUpInside" id="gi1-5z-vFX"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="YGB-gm-jtj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="lDn-Ji-CGe" firstAttribute="centerX" secondItem="YGB-gm-jtj" secondAttribute="centerX" id="cn6-m5-Vgl"/>
+                            <constraint firstItem="lDn-Ji-CGe" firstAttribute="top" secondItem="YGB-gm-jtj" secondAttribute="top" constant="63" id="ftI-5m-3Wv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qyh-u1-kNU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-728" y="-561"/>
+            <point key="canvasLocation" x="-678" y="-520"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="okj-h2-Dyp">
