--- a/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
+++ b/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zGv-hV-285">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -298,7 +298,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lDn-Ji-CGe">
-                                <rect key="frame" x="166" y="107" width="82" height="31"/>
+                                <rect key="frame" x="139.5" y="107" width="135" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="YMo-g4-QoH"/>
                                 </constraints>
@@ -308,12 +308,23 @@
                                     <action selector="initiateCrash:" destination="zGv-hV-285" eventType="touchUpInside" id="gi1-5z-vFX"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T24-bp-4ys">
+                                <rect key="frame" x="152" y="158" width="110" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="Custom Error"/>
+                                <connections>
+                                    <action selector="customError:" destination="zGv-hV-285" eventType="touchUpInside" id="8bp-9t-2lR"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="YGB-gm-jtj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="T24-bp-4ys" firstAttribute="centerX" secondItem="YGB-gm-jtj" secondAttribute="centerX" id="WWO-c3-5ib"/>
+                            <constraint firstItem="T24-bp-4ys" firstAttribute="width" secondItem="lDn-Ji-CGe" secondAttribute="width" multiplier="0.817073" id="X0q-74-XH9"/>
                             <constraint firstItem="lDn-Ji-CGe" firstAttribute="centerX" secondItem="YGB-gm-jtj" secondAttribute="centerX" id="cn6-m5-Vgl"/>
                             <constraint firstItem="lDn-Ji-CGe" firstAttribute="top" secondItem="YGB-gm-jtj" secondAttribute="top" constant="63" id="ftI-5m-3Wv"/>
+                            <constraint firstItem="T24-bp-4ys" firstAttribute="top" secondItem="lDn-Ji-CGe" secondAttribute="bottom" constant="20" id="xkx-6E-N4B"/>
                         </constraints>
                     </view>
                 </viewController>
