--- a/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
+++ b/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
@@ -289,10 +289,10 @@
             </objects>
             <point key="canvasLocation" x="787" y="88"/>
         </scene>
-        <!--Main-->
+        <!--FirebaseCrashlytics-->
         <scene sceneID="YyM-LN-jOH">
             <objects>
-                <viewController storyboardIdentifier="FirebaseViewController" title="Main" id="zGv-hV-285" customClass="FirebaseViewController" customModule="FunctionList_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FirebaseViewController" title="FirebaseCrashlytics" id="zGv-hV-285" customClass="FirebaseViewController" customModule="FunctionList_Swift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="alE-8d-1nF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
