--- a/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
+++ b/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
@@ -387,29 +387,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iFh-hp-Pjc">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iFh-hp-Pjc" customClass="MyInspector" customModule="FunctionList_Swift" customModuleProvider="target">
                                 <rect key="frame" x="100" y="100" width="214" height="31"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Sign in with Apple "/>
-                                <buttonConfiguration key="configuration" style="tinted" title="Sign in with Apple " cornerStyle="fixed">
-                                    <backgroundConfiguration key="background">
-                                        <color key="strokeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </backgroundConfiguration>
+                                <state key="normal" title="Sign in with Apple ">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign in with Apple ">
                                     <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" red="0.42745098040000001" green="0.35294117650000001" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="appleLogin:" destination="ORc-gT-6VU" eventType="touchUpInside" id="j7s-Zb-djx"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hPd-pi-yT1" customClass="DesignableUITextField" customModule="FunctionList_Swift" customModuleProvider="target">
+                                <rect key="frame" x="50" y="161" width="314" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="emailIcon"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cJ0-sA-FSZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="iFh-hp-Pjc" firstAttribute="leading" secondItem="cJ0-sA-FSZ" secondAttribute="leading" constant="100" id="arQ-q0-05K"/>
+                            <constraint firstItem="hPd-pi-yT1" firstAttribute="top" secondItem="iFh-hp-Pjc" secondAttribute="bottom" constant="30" id="fPd-Rh-bif"/>
                             <constraint firstItem="cJ0-sA-FSZ" firstAttribute="trailing" secondItem="iFh-hp-Pjc" secondAttribute="trailing" constant="100" id="pUG-zm-i4B"/>
                             <constraint firstItem="iFh-hp-Pjc" firstAttribute="top" secondItem="cJ0-sA-FSZ" secondAttribute="top" constant="100" id="qqj-Gs-h5h"/>
+                            <constraint firstItem="cJ0-sA-FSZ" firstAttribute="trailing" secondItem="hPd-pi-yT1" secondAttribute="trailing" constant="50" id="voQ-NP-oRI"/>
+                            <constraint firstItem="hPd-pi-yT1" firstAttribute="leading" secondItem="cJ0-sA-FSZ" secondAttribute="leading" constant="50" id="ypC-F6-zaz"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="osg-vc-QdJ"/>
@@ -754,6 +777,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="emailIcon" width="19" height="14"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
